--- a/index2.html
+++ b/index2.html
@@ -39,14 +39,14 @@
         <div class="page2-section1-contentwrap">
             <div class="page2-section1-flexbox-part1">
                 <h1 class="page2-mainheading">
-                    Deep Tier Financing Solutions
+                    Deep Tier Supply Chain Finance
                 </h1>
                 <h5 class="page2-subheading">
-                    Leverages the credibility of end buyer and systematically helps SMEs get financing at favorable rates.
+                    Empower underserved SME clients with access to credit at favorable rates, without raising the risk.
                 </h5>
-                <button class="page2-mainbutton">
+                <!-- <button class="page2-mainbutton">
                     Working
-                </button>
+                </button> -->
             </div>
             <div class="page2-section1-flexbox-part2">
                 <img src="./assets2/section1-mainimage.svg" alt="" class="page2-mainimage">
