--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index3.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="shortcut icon" href="./assets/xaults_icon_star.svg" type="image/x-icon">
     <title>Xaults</title>
@@ -122,7 +123,7 @@
             </div>
         </div>
     </section>
-    <section class="subsections" id="landingpage-section4">
+    <!-- <section class="subsections" id="landingpage-section4">
         <div class="landingpage-section4-wrapper">
             <h1 class=" sections-heading">
                 Your complete Digital Asset <br/>
@@ -200,9 +201,9 @@
                     <h2 class="landing-section4-gridbox-headings">
                         Transaction Policies
                     </h2>
-                    <!-- <h4 class="landingpage-section4-gridbox-subheadings">
+                    <h4 class="landingpage-section4-gridbox-subheadings">
                         no content
-                    </h4> -->
+                    </h4>
                     <span class="landingpage-section4-gridbox-spanbox">
                         <img src="./assets/landingpage-section4-gridbox-vector.png" alt="">
                         <h4 class="landingpage-section4-gridbox-subheadings">
@@ -228,9 +229,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
-    <section class="subsections" id="landingpage-section6">
+    <!-- <section class="subsections" id="landingpage-section6">
         <h1 class=" sections-heading landingpage-section4-mainheading">
             Why Us?
 
@@ -300,7 +301,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
     <section class="subsections" id="landingpage-section7">
         <h1 class=" sections-heading landingpage-section4-mainheading">
@@ -409,6 +410,19 @@
                 <p class="footeruppersection-flexbox-part1-paragraph">
                     Elevate your banking operations with our cutting-edge blockchain services for Central Bank Digital Currencies (CBDC). Discover the future of financial innovation.
                 </p>
+                <div class="landingpage-section1-inputboxwrap">
+                    <div class="page3-request-demo-container">
+                        <form class="page3-request-demo-form">
+                            <input type="email" placeholder="Enter e-mail address to Request Demo" required>
+                            <button type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 0 24 24" width="50px" fill="#000000">
+                                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                                    <path d="M12 4.5L10.59 6l4.88 4.88H3v2h12.47l-4.88 4.88L12 19.5 18.5 13z"/>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="footeruppersection-flexbox-part2">
                 <img src="./assets/phone-image-background.png" alt="" class="phonebackgrounfimage">
