--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="index3.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="shortcut icon" href="./assets/xaults_icon_star.svg" type="image/x-icon">
     <title>Xaults</title>
@@ -104,6 +105,19 @@
                 <p class="footeruppersection-flexbox-part1-paragraph">
                     Elevate your banking operations with our cutting-edge blockchain services for Central Bank Digital Currencies (CBDC). Discover the future of financial innovation.
                 </p>
+                <div class="landingpage-section1-inputboxwrap">
+                    <div class="page3-request-demo-container">
+                        <form class="page3-request-demo-form">
+                            <input type="email" placeholder="Enter e-mail address to Request Demo" required>
+                            <button type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 0 24 24" width="50px" fill="#000000">
+                                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                                    <path d="M12 4.5L10.59 6l4.88 4.88H3v2h12.47l-4.88 4.88L12 19.5 18.5 13z"/>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="footeruppersection-flexbox-part2">
                 <img src="./assets/phone-image-background.png" alt="" class="phonebackgrounfimage">
