--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="footerupper.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
     <link rel="stylesheet" href="index3.css">
@@ -89,6 +91,18 @@
                     Lorem ipsum dolor sit amet consectetur. Egestas pharetra aenean elementum eu at ultrices augue cursus. Eu leo orci donec quis cursus sollicitudin consequat. Nec.sknkan
                 </h4>
             </div>
+        </div>
+    </section>
+    <section class="subsections" id="page2-section3">
+        <h1 class=" sections-heading landingpage-section4-mainheading">
+            How it Works?
+        </h1>
+        <p class=" sections-subheading landingpage-section4-mainparagraph">
+           
+        </p>
+        <div class="page2-embeddedvideocontainer">
+            <canvas class="l9fM0h" data-playable-hook="background-canvas" width="980" height="460"></canvas>
+            <video preload="none" playsinline="true" src="./assets2/file.mp4"></video>
         </div>
     </section>
 
