--- a/index3.html
+++ b/index3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="footerupper.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
     <link rel="stylesheet" href="index3.css">
