--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
            height="100%" 
            controls="controls"> 
         <source src="./assets2/file.mp4" 
-                type="video/mp4" />
+                type="video/mp4" style="z-index: -1;"/>
     </video>
         </div>
     </section>
